--- a/Next-Super-Hero.BLL/Next-Super-Hero.BLL.csproj
+++ b/Next-Super-Hero.BLL/Next-Super-Hero.BLL.csproj
@@ -48,6 +48,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CarouselManager.cs" />
+    <Compile Include="HotHeroManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
