--- a/Next-Super-Hero.DAL/Next-Super-Hero.DAL.csproj
+++ b/Next-Super-Hero.DAL/Next-Super-Hero.DAL.csproj
@@ -49,6 +49,7 @@
   <ItemGroup>
     <Compile Include="BaseService.cs" />
     <Compile Include="CarouselService.cs" />
+    <Compile Include="HotHeroService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
