add cover,poset,mp4 source

--- a/Next-Super-Hero/Next-Super-Hero.csproj
+++ b/Next-Super-Hero/Next-Super-Hero.csproj
@@ -190,16 +190,37 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Areas\HelpPage\HelpPage.css" />
+    <Content Include="Carousel\hongfa.jpg" />
+    <Content Include="Carousel\longzhu.jpg" />
+    <Content Include="Carousel\U.jpg" />
     <Content Include="Content\bootstrap-theme.css" />
     <Content Include="Content\bootstrap-theme.min.css" />
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
+    <Content Include="Cover\haizei.jpg" />
+    <Content Include="Cover\huoying.jpg" />
+    <Content Include="Cover\jojo.jpg" />
+    <Content Include="Cover\kenan.jpg" />
+    <Content Include="Cover\longzhu.jpg" />
+    <Content Include="Cover\paojie.jpg" />
+    <Content Include="Cover\xiongmao.jpg" />
     <Content Include="favicon.ico" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
-    <Content Include="Img\hongfa.jpg" />
-    <Content Include="Img\U.jpg" />
-    <Content Include="Img\yihu.jpg" />
+    <Content Include="MP4\haizei.mp4" />
+    <Content Include="MP4\huoying.mp4" />
+    <Content Include="MP4\jojo.mp4" />
+    <Content Include="MP4\kenan.mp4" />
+    <Content Include="MP4\longzhu.mp4" />
+    <Content Include="MP4\paojie.mp4" />
+    <Content Include="MP4\xiongmao.mp4" />
+    <Content Include="Poster\haizei2.jpg" />
+    <Content Include="Poster\huoying2.jpg" />
+    <Content Include="Poster\jojo2.jpg" />
+    <Content Include="Poster\kenan2.jpg" />
+    <Content Include="Poster\longzhu2.jpg" />
+    <Content Include="Poster\paojie2.jpg" />
+    <Content Include="Poster\xiongmao2.jpg" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
     <Content Include="Areas\HelpPage\Views\Web.config" />
